fix: set table columns to overlow hidden (remove scrollbar for any column)

--- a/src/modules/core/webviews/table/webview/style.css
+++ b/src/modules/core/webviews/table/webview/style.css
@@ -244,8 +244,7 @@ vscode-text-field {
     border-bottom: 1px solid var(--color-primary);
     border-right: 1px solid var(--color-primary);
     outline: none;
-    overflow-x: auto;
-    overflow-y: hidden;
+    overflow: hidden;
     white-space: nowrap;
 }
 
